<?xml version="1.0" encoding="utf-8"?>
<com.ahmedMustafa.Hani.utils.DataFrame xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dataLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:padding="8dp"
                            android:src="@drawable/ic_setting" />

                        <ImageView
                            android:id="@+id/notify"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/setting"
                            android:padding="8dp"
                            android:src="@drawable/ic_on_notify" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_logout"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:padding="8dp"
                            android:id="@+id/logout"
                            android:tint="@color/white"/>


                    </RelativeLayout>
                </android.support.v7.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        style="@style/textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="userName"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:indeterminateTint="@color/white" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/ic_launcher_round" />

                    <TextView
                        android:id="@+id/profileState"
                        style="@style/textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:text="حساب موثق"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="@dimen/radias"
                    app:cardElevation="@dimen/elevation">

                    <LinearLayout
                        android:id="@+id/walletView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wallet"
                            android:textColor="@color/textClolor" />

                        <TextView
                            android:id="@+id/walletText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="0"
                            android:textColor="@color/textClolor" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="@dimen/radias"
                    app:cardElevation="@dimen/elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/delivry"
                            android:textColor="@color/textClolor" />

                        <TextView
                            android:id="@+id/delivaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="0"
                            android:textColor="@color/textClolor" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="@dimen/radias"
                    app:cardElevation="@dimen/elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/orderCount"
                            android:textColor="@color/textClolor" />

                        <TextView
                            android:id="@+id/orderCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/textClolor" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="@dimen/radias"
                    app:cardElevation="@dimen/elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/userRate"
                            android:textColor="@color/textClolor" />

                        <TextView
                            android:id="@+id/rateUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/textClolor" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="@dimen/radias"
                    app:cardElevation="@dimen/elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/twitterContact"
                            android:textColor="@color/textClolor" />

                        <TextView
                            android:id="@+id/contactTwitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/textClolor" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</com.ahmedMustafa.Hani.utils.DataFrame>